@@ -1,5 +1,12 @@
 2009-08-01 Braden McDaniel  <braden@endoframe.com>
 
+	Moved src/libopenvrml-control to src/local/libopenvrml-control.
+
+	* src/Makefile.am
+	* src/local/libopenvrml-control
+
+2009-08-01 Braden McDaniel  <braden@endoframe.com>
+
 	* src/script/java.cpp: Removed obsolete path separator definition.
 
 2009-07-30 Braden McDaniel  <braden@endoframe.com>
